Update page templates to correct a number of textual and layout issues.

--- a/styles/e29.scss
+++ b/styles/e29.scss
@@ -48,7 +48,6 @@ button.galleryCTA {
   //background-color: rgba(69,78,49,0.7);
   max-height: 100px;
   position: relative;
-  z-index: 100;
   border-bottom: 1px solid rgba(shade(#FAF0E6,10%),1.0);
 
   .brandBlock {
@@ -67,6 +66,10 @@ button.galleryCTA {
       color: #b95935;
       font-size: 1.125em;
     }
+    &:hover {
+      cursor: pointer;
+      opacity: 0.5;
+    }
   }
   .menu__links {
     a {
@@ -81,6 +84,9 @@ button.galleryCTA {
   }
 }
 
+.heroQuestion {
+  margin-top: 0;
+}
 .contact_note {
   margin-top: 2em;
 }
@@ -96,6 +102,9 @@ footer {
   }
 }
 
+a.underline {
+  text-decoration: underline;
+}
 
 
 /* Carousel styles */
@@ -203,6 +212,39 @@ footer {
   display: none;
 }
 
+a.e29Btn, .contact__btn {
+  background-color: initial;
+  background-image: linear-gradient(-180deg, #FF7E31, #E62C03);
+  border-radius: 3px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  height: 3em;
+  line-height: 3em;
+  outline: 0;
+  overflow: hidden;
+  padding: 0 20px;
+  pointer-events: auto;
+  position: relative;
+  text-align: center;
+  touch-action: manipulation;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: top;
+  white-space: nowrap;
+  z-index: 9;
+  border: 0;
+  transition: box-shadow .2s;
+  &:hover {
+    box-shadow: rgba(253, 76, 0, 0.5) 0 3px 8px;
+  }
+  &:active {
+    opacity: 0.5;
+  }
+}
+
+
 /* MEDIA QUERIES */
 
 @media only screen and (max-width: 1025px) {
@@ -218,10 +260,7 @@ footer {
 }
 
 @media only screen and (max-width: 960px) {
-  .fadein {
-    height: 395px;
-    max-height: 395px;
-  }
+
 }
 
 @media only screen and (max-width: 769px) {
@@ -243,11 +282,7 @@ footer {
 
   .carousel {
     padding: 2em 0 0em 0;
-    margin-bottom: -0.75em;
-  }
-  .fadein {
-    height: 235px;
-    max-height: 235px;
+    margin-bottom: 2em;
   }
 
   .contact__mobile {
@@ -261,9 +296,11 @@ footer {
     padding-top: 1em;
     .social {
       text-align: center;
+      margin-bottom: 0.5em;
     }
     .copyright {
       text-align: center;
+      margin-bottom: 0.5em;
     }
   }
   .mobile__spacer {
@@ -271,7 +308,6 @@ footer {
   }
 
   .navbar-mobile_menu {
-    border: 1px solid red;
     width: 100vw;
     a {
       display: inline-block;
